1. Fix restaurant page (base-container overflow) 2. Fix service worker

--- a/6. Restaurant Reviews App/public/css/tablet.css
+++ b/6. Restaurant Reviews App/public/css/tablet.css
@@ -82,3 +82,9 @@ body,td,th,p{
 	height: 100%;
 	width: 100%;
 }
+
+
+.inside .base-container {
+    width: 50%;
+    margin: 0;
+}
